[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Crab.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/ClawAttack.tscn" type="PackedScene" id=3]

[node name="Player" type="Node2D"]
position = Vector2( 586.859, 267.647 )
script = ExtResource( 2 )
claw_attack_scene = ExtResource( 3 )
movement_speed = 300
rotation_speed = 180
throw_coconut_force = 800.0
distance_reach_coconut = 100.0
attack = 4
penetration_power = 5

[node name="Crab" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.128093, 0.128093 )
texture = ExtResource( 1 )

[node name="ClawAttackPositionLeft" type="Position2D" parent="."]
position = Vector2( -22.0219, -24.2649 )

[node name="ClawAttackPositionRight" type="Position2D" parent="."]
position = Vector2( -20.6252, 21.1271 )
scale = Vector2( 1, -1 )

[node name="CoconutContainer" type="Position2D" parent="."]
position = Vector2( -39.075, -1.79245 )
